--- a/docker/squid.conf
+++ b/docker/squid.conf
@@ -7,36 +7,32 @@ acl localnet src 0.0.0.0/8
 acl localnet src 172.0.0.0/24
  
 acl SSL_ports port 443
-acl Safe_ports port 80        # https
+acl Safe_ports port 80        # http
 acl Safe_ports port 21        # ftp
-acl Safe_ports port 443        # httpss
+acl Safe_ports port 443        # https
 acl Safe_ports port 70        # gopher
 acl Safe_ports port 210        # wais
 acl Safe_ports port 1025-65535    # unregistered ports
-acl Safe_ports port 280        # https-mgmt
-acl Safe_ports port 488        # gss-https
+acl Safe_ports port 280        # http-mgmt
+acl Safe_ports port 488        # gss-http
 acl Safe_ports port 591        # filemaker
-acl Safe_ports port 777        # multiling https
+acl Safe_ports port 777        # multiling http
 acl CONNECT method CONNECT
  
-username&password auth config
 auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/squid_passwd
 acl ncsa_users proxy_auth REQUIRED
-https_access allow ncsa_users
+http_access allow ncsa_users
  
  
-https_access deny !Safe_ports
-https_access deny CONNECT !SSL_ports
-https_access allow localhost manager
-https_access deny manager
-https_access deny to_localhost
-https_access allow localnet
-https_access allow localhost
-https_access deny all
-# https_access allow all
-# https_port 3128
-
-httpss_port 3128 cert=/etc/squid/x.com.crt key=/etc/squid/x.com.key
+http_access deny !Safe_ports
+http_access deny CONNECT !SSL_ports
+http_access allow localhost manager
+http_access deny manager
+http_access deny to_localhost
+http_access allow localnet
+http_access allow localhost
+http_access deny all
+http_port 3128
  
 refresh_pattern ^ftp:        1440    20%    10080
 refresh_pattern ^gopher:    1440    0%    1440
