将nextcloud脚本改为PC部署的配置。因为nextcloud-SMB的方案性能，尤其在线视频播放的性能差。改为了直接访问本地文件的方案。

--- a/docker/frpc.toml
+++ b/docker/frpc.toml
@@ -16,3 +16,10 @@ type = "tcp"
 localIP = "172.17.0.1"
 localPort = 445
 remotePort = 445
+
+[[proxies]]
+name = "nextcloud"
+type = "tcp"
+localIP = "172.18.0.2"
+localPort = 80
+remotePort = 80
